--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_verbo_irregular.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_verbo_irregular.xml
@@ -4,7 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".Fragments.EscribirVerboIrregularFragment">
+	tools:context=".Fragments.JuegoEscribirVerboIrregularFragment">
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
@@ -17,7 +17,7 @@
 			tools:layout_editor_absoluteY="110dp">
 
 			<ImageView
-				android:id="@+id/ivCongratulations"
+				android:id="@+id/ivImagenFinal"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:src="@drawable/congratulation"
@@ -28,6 +28,7 @@
 				app:layout_constraintTop_toTopOf="parent" />
 
 			<androidx.constraintlayout.widget.ConstraintLayout
+				android:id="@+id/lyContenedorGeneral"
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				app:layout_constraintBottom_toBottomOf="parent"
@@ -35,11 +36,165 @@
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toTopOf="parent">
 
+				<TextView
+					android:id="@+id/tvJuegoCantidadPalabras"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:gravity="center"
+					android:text="TextView"
+					android:textSize="@dimen/tamanioTextoJuegoVI"
+					android:textStyle="bold"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent" />
+
+				<TextView
+					android:id="@+id/tvJuegoPalabraAdivinar"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="24dp"
+					android:gravity="center"
+					android:text="TextView"
+					android:textSize="@dimen/tamanioTextoJuegoVI"
+					android:textStyle="bold"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/tvJuegoCantidadPalabras" />
+
+				<androidx.constraintlayout.widget.ConstraintLayout
+					android:id="@+id/lyContendor4"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:layout_marginTop="24dp"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/tvJuegoPalabraAdivinar">
+
+					<TableLayout
+						android:id="@+id/tableLayout"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toTopOf="parent">
+
+						<TableRow
+							android:layout_width="match_parent"
+							android:layout_height="match_parent">
+
+							<com.google.android.material.textfield.TextInputLayout
+								style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+								android:layout_width="match_parent"
+								android:layout_height="match_parent"
+								android:layout_weight="1"
+								android:hint="Respuesta">
+
+								<com.google.android.material.textfield.TextInputEditText
+									android:id="@+id/etRespuestaInfinitivo"
+									android:layout_width="match_parent"
+									android:layout_height="wrap_content" />
+							</com.google.android.material.textfield.TextInputLayout>
+
+							<com.google.android.material.textfield.TextInputLayout
+								style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+								android:layout_width="match_parent"
+								android:layout_height="match_parent"
+								android:layout_weight="1"
+								android:hint="Respuesta">
+
+								<com.google.android.material.textfield.TextInputEditText
+									android:id="@+id/etRespuestaPasado"
+									android:layout_width="match_parent"
+									android:layout_height="wrap_content" />
+							</com.google.android.material.textfield.TextInputLayout>
+
+							<com.google.android.material.textfield.TextInputLayout
+								style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+								android:layout_width="match_parent"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:hint="Respuesta">
+
+								<com.google.android.material.textfield.TextInputEditText
+									android:id="@+id/etRespuestaParticipio"
+									android:layout_width="match_parent"
+									android:layout_height="wrap_content" />
+							</com.google.android.material.textfield.TextInputLayout>
+						</TableRow>
+					</TableLayout>
+
+					<TableLayout
+						android:id="@+id/tablaRespuestas"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toBottomOf="@+id/tableLayout">
+
+						<TableRow
+							android:layout_width="match_parent"
+							android:layout_height="match_parent">
+
+							<TextView
+								android:id="@+id/tvSolucionInfinitivo"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="TextView"
+								android:textSize="@dimen/tamanioTextoJuegoVI"
+								android:textStyle="bold"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent" />
+
+							<TextView
+								android:id="@+id/tvSolucionPasado"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="TextView"
+								android:textSize="@dimen/tamanioTextoJuegoVI"
+								android:textStyle="bold"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent" />
+
+							<TextView
+								android:id="@+id/tvSolucionParticipio"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="TextView"
+								android:textSize="@dimen/tamanioTextoJuegoVI"
+								android:textStyle="bold"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent" />
+						</TableRow>
+					</TableLayout>
+
+					<TextView
+						android:id="@+id/tvCantidadIntentosRestantes"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="24dp"
+						android:gravity="center"
+						android:text="TextView"
+						android:textSize="@dimen/tamanioTextoJuegoVI"
+						android:textStyle="bold"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toBottomOf="@+id/tablaRespuestas" />
+				</androidx.constraintlayout.widget.ConstraintLayout>
+
 				<TableLayout
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
 					android:layout_marginTop="24dp"
-					app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego">
+					app:layout_constraintTop_toBottomOf="@+id/lyContendor4">
 
 					<TableRow
 						android:layout_width="match_parent"
@@ -120,151 +275,6 @@
 							app:iconSize="25dp" />
 					</TableRow>
 				</TableLayout>
-
-				<TextView
-					android:id="@+id/tvJuegoCantidadPalabras"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:gravity="center"
-					android:text="TextView"
-					android:textSize="@dimen/tamanioTextoJuegoVI"
-					android:textStyle="bold"
-					app:layout_constraintEnd_toEndOf="parent"
-					app:layout_constraintStart_toStartOf="parent"
-					app:layout_constraintTop_toTopOf="parent" />
-
-				<TextView
-					android:id="@+id/tvJuegoPalabraAdivinar"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginTop="24dp"
-					android:gravity="center"
-					android:text="TextView"
-					android:textSize="@dimen/tamanioTextoJuegoVI"
-					android:textStyle="bold"
-					app:layout_constraintEnd_toEndOf="parent"
-					app:layout_constraintStart_toStartOf="parent"
-					app:layout_constraintTop_toBottomOf="@+id/tvJuegoCantidadPalabras" />
-
-				<androidx.constraintlayout.widget.ConstraintLayout
-					android:id="@+id/lyRespuestaJuego"
-					android:layout_width="match_parent"
-					android:layout_height="match_parent"
-					android:layout_marginTop="24dp"
-					app:layout_constraintEnd_toEndOf="parent"
-					app:layout_constraintStart_toStartOf="parent"
-					app:layout_constraintTop_toBottomOf="@+id/tvJuegoPalabraAdivinar">
-
-					<TableLayout
-						android:id="@+id/tableLayout"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toTopOf="parent">
-
-						<TableRow
-							android:layout_width="match_parent"
-							android:layout_height="match_parent">
-
-							<com.google.android.material.textfield.TextInputLayout
-								style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-								android:layout_width="match_parent"
-								android:layout_height="match_parent"
-								android:layout_weight="1"
-								android:hint="Respuesta">
-
-								<com.google.android.material.textfield.TextInputEditText
-									android:id="@+id/etRespuestaInfinitivo"
-									android:layout_width="match_parent"
-									android:layout_height="wrap_content" />
-							</com.google.android.material.textfield.TextInputLayout>
-
-							<com.google.android.material.textfield.TextInputLayout
-								style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-								android:layout_width="match_parent"
-								android:layout_height="match_parent"
-								android:layout_weight="1"
-								android:hint="Respuesta">
-
-								<com.google.android.material.textfield.TextInputEditText
-									android:id="@+id/etRespuestaPasado"
-									android:layout_width="match_parent"
-									android:layout_height="wrap_content" />
-							</com.google.android.material.textfield.TextInputLayout>
-
-							<com.google.android.material.textfield.TextInputLayout
-								style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-								android:layout_width="match_parent"
-								android:layout_height="wrap_content"
-								android:layout_weight="1"
-								android:hint="Respuesta">
-
-								<com.google.android.material.textfield.TextInputEditText
-									android:id="@+id/etRespuestaPreterito"
-									android:layout_width="match_parent"
-									android:layout_height="wrap_content" />
-							</com.google.android.material.textfield.TextInputLayout>
-						</TableRow>
-
-						<TableRow
-							android:layout_width="match_parent"
-							android:layout_height="match_parent">
-
-							<TextView
-								android:id="@+id/tvSolucion"
-								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
-								android:layout_weight="1"
-								android:gravity="center"
-								android:text="TextView"
-								android:textSize="@dimen/tamanioTextoJuegoVI"
-								android:textStyle="bold"
-								app:layout_constraintEnd_toEndOf="parent"
-								app:layout_constraintStart_toStartOf="parent"
-								app:layout_constraintTop_toTopOf="parent" />
-
-							<TextView
-								android:id="@+id/tvSolucion2"
-								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
-								android:layout_weight="1"
-								android:gravity="center"
-								android:text="TextView"
-								android:textSize="@dimen/tamanioTextoJuegoVI"
-								android:textStyle="bold"
-								app:layout_constraintEnd_toEndOf="parent"
-								app:layout_constraintStart_toStartOf="parent"
-								app:layout_constraintTop_toTopOf="parent" />
-
-							<TextView
-								android:id="@+id/tvSolucion3"
-								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
-								android:layout_weight="1"
-								android:gravity="center"
-								android:text="TextView"
-								android:textSize="@dimen/tamanioTextoJuegoVI"
-								android:textStyle="bold"
-								app:layout_constraintEnd_toEndOf="parent"
-								app:layout_constraintStart_toStartOf="parent"
-								app:layout_constraintTop_toTopOf="parent" />
-						</TableRow>
-					</TableLayout>
-
-					<TextView
-						android:id="@+id/tvCantidadIntentosRestantes"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="24dp"
-						android:gravity="center"
-						android:text="TextView"
-						android:textSize="@dimen/tamanioTextoJuegoVI"
-						android:textStyle="bold"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
-				</androidx.constraintlayout.widget.ConstraintLayout>
 			</androidx.constraintlayout.widget.ConstraintLayout>
 		</androidx.constraintlayout.widget.ConstraintLayout>
 	</androidx.constraintlayout.widget.ConstraintLayout>
