--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_verbo_irregular.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_verbo_irregular.xml
@@ -18,10 +18,10 @@
 
 			<ImageView
 				android:id="@+id/ivImagenFinal"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
+				android:layout_width="0dp"
+				android:layout_height="0dp"
 				android:src="@drawable/congratulation"
-				android:visibility="gone"
+				android:visibility="visible"
 				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
@@ -63,8 +63,8 @@
 
 				<androidx.constraintlayout.widget.ConstraintLayout
 					android:id="@+id/lyContendor4"
-					android:layout_width="match_parent"
-					android:layout_height="match_parent"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
 					android:layout_marginTop="24dp"
 					app:layout_constraintEnd_toEndOf="parent"
 					app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +87,7 @@
 								android:layout_width="match_parent"
 								android:layout_height="match_parent"
 								android:layout_weight="1"
-								android:hint="Respuesta">
+								android:hint="Infinitivo">
 
 								<com.google.android.material.textfield.TextInputEditText
 									android:id="@+id/etRespuestaInfinitivo"
@@ -100,7 +100,7 @@
 								android:layout_width="match_parent"
 								android:layout_height="match_parent"
 								android:layout_weight="1"
-								android:hint="Respuesta">
+								android:hint="Pasado">
 
 								<com.google.android.material.textfield.TextInputEditText
 									android:id="@+id/etRespuestaPasado"
@@ -113,7 +113,7 @@
 								android:layout_width="match_parent"
 								android:layout_height="wrap_content"
 								android:layout_weight="1"
-								android:hint="Respuesta">
+								android:hint="Participio">
 
 								<com.google.android.material.textfield.TextInputEditText
 									android:id="@+id/etRespuestaParticipio"
@@ -174,6 +174,56 @@
 								app:layout_constraintStart_toStartOf="parent"
 								app:layout_constraintTop_toTopOf="parent" />
 						</TableRow>
+
+						<TableRow
+							android:layout_width="match_parent"
+							android:layout_height="match_parent">
+
+							<androidx.constraintlayout.widget.ConstraintLayout
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_weight="1">
+
+								<ImageView
+									android:id="@+id/ivRespuestaInfinitivo"
+									android:layout_width="50dp"
+									android:layout_height="50dp"
+									android:src="@drawable/ic_iconfinder_sign_check"
+									app:layout_constraintEnd_toEndOf="parent"
+									app:layout_constraintStart_toStartOf="parent"
+									app:layout_constraintTop_toTopOf="parent" />
+							</androidx.constraintlayout.widget.ConstraintLayout>
+
+							<androidx.constraintlayout.widget.ConstraintLayout
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_weight="1">
+
+								<ImageView
+									android:id="@+id/ivRespuestaPasado"
+									android:layout_width="50dp"
+									android:layout_height="50dp"
+									android:src="@drawable/ic_iconfinder_sign_check"
+									app:layout_constraintEnd_toEndOf="parent"
+									app:layout_constraintStart_toStartOf="parent"
+									app:layout_constraintTop_toTopOf="parent" />
+							</androidx.constraintlayout.widget.ConstraintLayout>
+
+							<androidx.constraintlayout.widget.ConstraintLayout
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_weight="1">
+
+								<ImageView
+									android:id="@+id/ivRespuestaParticipio"
+									android:layout_width="50dp"
+									android:layout_height="50dp"
+									android:src="@drawable/ic_iconfinder_sign_check"
+									app:layout_constraintEnd_toEndOf="parent"
+									app:layout_constraintStart_toStartOf="parent"
+									app:layout_constraintTop_toTopOf="parent" />
+							</androidx.constraintlayout.widget.ConstraintLayout>
+						</TableRow>
 					</TableLayout>
 
 					<TextView
@@ -192,7 +242,7 @@
 
 				<TableLayout
 					android:layout_width="match_parent"
-					android:layout_height="match_parent"
+					android:layout_height="wrap_content"
 					android:layout_marginTop="24dp"
 					app:layout_constraintTop_toBottomOf="@+id/lyContendor4">
 
