--- a/SayTheWord/SayTheWord/app/src/main/res/layout/aaa.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/aaa.xml
@@ -123,16 +123,15 @@
 				<androidx.constraintlayout.widget.ConstraintLayout
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
-					android:layout_span="1"
 					android:layout_weight="1">
 
 					<TextView
-						android:id="@+id/tvCantidadIntentosRestantes"
-						android:layout_width="wrap_content"
+						android:id="@+id/tvCantidadIntentosRestantes2"
+						android:layout_width="0dp"
 						android:layout_height="wrap_content"
 						android:layout_marginTop="24dp"
 						android:gravity="center"
-						android:text="TextView"
+						android:text="TextView aaa aaaa sdsss"
 						android:textSize="@dimen/tamanioTextoJuegoVI"
 						android:textStyle="bold"
 						app:layout_constraintEnd_toEndOf="parent"
