--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_verbo_irregular.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_verbo_irregular.xml
@@ -140,6 +140,8 @@
 								style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 								android:layout_width="0dp"
 								android:layout_height="wrap_content"
+								android:layout_marginLeft="2dp"
+								android:layout_marginRight="1dp"
 								android:layout_weight="1"
 								android:hint="Infinitivo">
 
@@ -153,6 +155,8 @@
 								style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 								android:layout_width="0dp"
 								android:layout_height="wrap_content"
+								android:layout_marginLeft="1dp"
+								android:layout_marginRight="1dp"
 								android:layout_weight="1"
 								android:hint="Pasado">
 
@@ -166,6 +170,8 @@
 								style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 								android:layout_width="0dp"
 								android:layout_height="wrap_content"
+								android:layout_marginLeft="1dp"
+								android:layout_marginRight="2dp"
 								android:layout_weight="1"
 								android:hint="Participio">
 
@@ -219,6 +225,46 @@
 								android:textSize="@dimen/tamanioTextoJuegoVI"
 								android:textStyle="bold" />
 						</TableRow>
+
+
+
+
+						<TableRow
+							android:layout_width="match_parent"
+							android:layout_height="match_parent">
+
+							<TextView
+								android:id="@+id/tvPronunciacionInfinitivo"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="TextView"
+								android:textSize="@dimen/tamanioTextoJuegoVI"
+								android:textStyle="bold" />
+
+							<TextView
+								android:id="@+id/tvPronunciacionPasado"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="TextView"
+								android:textSize="@dimen/tamanioTextoJuegoVI"
+								android:textStyle="bold" />
+
+							<TextView
+								android:id="@+id/tvPronunciacionParticipio"
+								android:layout_width="0dp"
+								android:layout_height="wrap_content"
+								android:layout_weight="1"
+								android:gravity="center"
+								android:text="TextView"
+								android:textSize="@dimen/tamanioTextoJuegoVI"
+								android:textStyle="bold" />
+						</TableRow>
+
+
 
 						<TableRow
 							android:layout_width="match_parent"
