--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_verbos_irregulares.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_verbos_irregulares.xml
@@ -120,7 +120,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:gravity="center"
-							android:text="TextView"
+							android:text="TextView a vsss sss ssss ssss sss sssssss"
 							android:textSize="@dimen/tamanioTextoJuegoVI"
 							android:textStyle="bold"
 							app:layout_constraintEnd_toEndOf="parent"
@@ -209,30 +209,6 @@
 					</androidx.constraintlayout.widget.ConstraintLayout>
 
 					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btNext"
-						style="@style/Widget.MaterialComponents.Button"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="32dp"
-						android:text="Next"
-						app:backgroundTint="#82B1FF"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego" />
-
-					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btPrevious"
-						style="@style/Widget.MaterialComponents.Button"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="32dp"
-						android:layout_marginEnd="22dp"
-						android:text="Previous"
-						app:backgroundTint="#82B1FF"
-						app:layout_constraintEnd_toStartOf="@+id/btNext"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego" />
-
-					<com.google.android.material.button.MaterialButton
 						android:id="@+id/btRestart"
 						style="@style/Widget.MaterialComponents.Button"
 						android:layout_width="wrap_content"
@@ -243,6 +219,54 @@
 						app:layout_constraintEnd_toEndOf="parent"
 						app:layout_constraintStart_toStartOf="parent"
 						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego" />
+
+					<TableLayout
+						android:layout_width="0dp"
+						android:layout_height="match_parent"
+						android:layout_marginTop="32dp"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego">
+
+						<TableRow
+							android:layout_width="match_parent"
+							android:layout_height="match_parent">
+
+							<androidx.constraintlayout.widget.ConstraintLayout
+								android:layout_width="match_parent"
+								android:layout_height="match_parent"
+								android:layout_weight="1">
+
+								<com.google.android.material.button.MaterialButton
+									android:id="@+id/btPrevious"
+									style="@style/Widget.MaterialComponents.Button"
+									android:layout_width="wrap_content"
+									android:layout_height="wrap_content"
+									android:text="Previous"
+									app:backgroundTint="#82B1FF"
+									app:layout_constraintEnd_toEndOf="parent"
+									app:layout_constraintStart_toStartOf="parent"
+									app:layout_constraintTop_toTopOf="parent" />
+							</androidx.constraintlayout.widget.ConstraintLayout>
+
+							<androidx.constraintlayout.widget.ConstraintLayout
+								android:layout_width="match_parent"
+								android:layout_height="match_parent"
+								android:layout_weight="1">
+
+								<com.google.android.material.button.MaterialButton
+									android:id="@+id/btNext"
+									style="@style/Widget.MaterialComponents.Button"
+									android:layout_width="wrap_content"
+									android:layout_height="wrap_content"
+									android:text="Next"
+									app:backgroundTint="#82B1FF"
+									app:layout_constraintEnd_toEndOf="parent"
+									app:layout_constraintStart_toStartOf="parent"
+									app:layout_constraintTop_toTopOf="parent" />
+							</androidx.constraintlayout.widget.ConstraintLayout>
+						</TableRow>
+					</TableLayout>
 				</androidx.constraintlayout.widget.ConstraintLayout>
 			</androidx.constraintlayout.widget.ConstraintLayout>
 		</androidx.cardview.widget.CardView>
