--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_verbos_irregulares.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_verbos_irregulares.xml
@@ -60,8 +60,7 @@
 						app:iconSize="25dp"
 						app:layout_constraintBottom_toBottomOf="parent"
 						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/btNext" />
+						app:layout_constraintStart_toStartOf="parent" />
 
 					<TextView
 						android:id="@+id/tvJuegoCantidadPalabras"
