--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_seleccion_listado.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_seleccion_listado.xml
@@ -24,12 +24,11 @@
 				style="@style/Widget.MaterialComponents.Button"
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
-				android:layout_marginTop="32dp"
 				android:text="Palabras"
 				app:backgroundTint="#82B1FF"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+				app:layout_constraintTop_toTopOf="parent" />
 
 			<com.google.android.material.button.MaterialButton
 				android:id="@+id/btListadoPalabrasProblematicas"
