--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_verbo_irregular.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_verbo_irregular.xml
@@ -4,7 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".Fragments.JuegoEscribirVerboIrregularFragment">
+	tools:context="martin.ingles.saytheword.Fragments.JuegoEscribirVerboIrregularFragment">
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
