--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_listado_palabras.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_listado_palabras.xml
@@ -3,7 +3,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".Fragments.ListadoFragment">
+	tools:context="martin.ingles.saytheword.Fragments.ListadoFragment">
 
 	<androidx.recyclerview.widget.RecyclerView
 		android:id="@+id/recyclerView"
