--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_palabras.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_palabras.xml
@@ -48,7 +48,7 @@
 					app:layout_constraintTop_toTopOf="parent">
 
 					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btPalabraProblematica"
+						android:id="@+id/btDificultad"
 						style="@style/Widget.MaterialComponents.Button"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
