--- a/SayTheWord/SayTheWord/app/src/main/res/values/colors.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 	<color name="colorPrimary">#008577</color>
 	<color name="colorPrimaryDark">#00574B</color>
 	<color name="colorAccent">#E8151C</color>
-	<color name="colorPalabraProblematica">#FD0006</color>
-	<color name="colorPalabraBuena">#43A047</color>
-	<color name="colorPalabraNormal">#ADADAD</color>
+	<color name="colorDificultadDificil">#FD0006</color>
+	<color name="colorDificultadFacil">#43A047</color>
+	<color name="colorDificultadNormal">#ADADAD</color>
 </resources>
