--- a/SayTheWord/SayTheWord/app/src/main/res/layout/item_irregular_verb.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/item_irregular_verb.xml
@@ -92,7 +92,7 @@
 					app:layout_constraintTop_toTopOf="parent" />
 
 				<com.google.android.material.button.MaterialButton
-					android:id="@+id/btPalabraProblematicaListado"
+					android:id="@+id/btDificultad"
 					android:layout_width="30dp"
 					android:layout_height="30dp"
 					android:layout_marginBottom="8dp"
